0.8.0/_sources/generated_examples/index.rst.txt
:orphan:

.. _gallery:

Interactive examples
====================



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. thumbnail-parent-div-close

.. raw:: html

    </div>

Decoding
--------



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we&#x27;ll learn how to decode a video using the VideoDecoder class.">

.. only:: html

  .. image:: /generated_examples/decoding/images/thumb/sphx_glr_basic_example_thumb.png
    :alt:

  :ref:`sphx_glr_generated_examples_decoding_basic_example.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Decoding a video with VideoDecoder</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we&#x27;ll learn how to decode an audio file using the AudioDecoder class.">

.. only:: html

  .. image:: /generated_examples/decoding/images/thumb/sphx_glr_audio_decoding_thumb.png
    :alt:

  :ref:`sphx_glr_generated_examples_decoding_audio_decoding.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Decoding audio streams with AudioDecoder</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="TorchCodec can use supported Nvidia hardware (see support matrix here) to speed-up video decoding. This is called &quot;CUDA Decoding&quot; and it uses Nvidia&#x27;s NVDEC hardware decoder and CUDA kernels to respectively decompress and convert to RGB. CUDA Decoding can be faster than CPU Decoding for the actual decoding step and also for subsequent transform steps like scaling, cropping or rotating. This is because the decode step leaves the decoded tensor in GPU memory so the GPU doesn&#x27;t have to fetch from main memory before running the transform steps. Encoded packets are often much smaller than decoded frames so CUDA decoding also uses less PCI-e bandwidth.">

.. only:: html

  .. image:: /generated_examples/decoding/images/thumb/sphx_glr_basic_cuda_example_thumb.png
    :alt:

  :ref:`sphx_glr_generated_examples_decoding_basic_cuda_example.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Accelerated video decoding on GPUs with CUDA and NVDEC</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we will show how to decode streaming data. That is, when files do not reside locally, we will show how to only download the data segments that are needed to decode the frames you care about. We accomplish this capability with Python file-like objects. Our example uses a video file, so we use the VideoDecoder class to decode it. But all of the lessons here also apply to audio files and the AudioDecoder class as well.">

.. only:: html

  .. image:: /generated_examples/decoding/images/thumb/sphx_glr_file_like_thumb.png
    :alt:

  :ref:`sphx_glr_generated_examples_decoding_file_like.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Streaming data through file-like support</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we will describe the seek_mode parameter of the VideoDecoder class. This parameter offers a trade-off between the speed of the VideoDecoder creation, against the seeking accuracy of the retreived frames (i.e. in approximate mode, requesting the i&#x27;th frame may not necessarily return frame i).">

.. only:: html

  .. image:: /generated_examples/decoding/images/thumb/sphx_glr_approximate_mode_thumb.png
    :alt:

  :ref:`sphx_glr_generated_examples_decoding_approximate_mode.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Exact vs Approximate seek mode: Performance and accuracy comparison</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we&#x27;ll learn how to sample video clips from a video. A clip generally denotes a sequence or batch of frames, and is typically passed as input to video models.">

.. only:: html

  .. image:: /generated_examples/decoding/images/thumb/sphx_glr_sampling_thumb.png
    :alt:

  :ref:`sphx_glr_generated_examples_decoding_sampling.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">How to sample video clips</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this tutorial, we&#x27;ll explore different approaches to parallelize video decoding of a large number of frames from a single video. We&#x27;ll compare three parallelization strategies:">

.. only:: html

  .. image:: /generated_examples/decoding/images/thumb/sphx_glr_parallel_decoding_thumb.png
    :alt:

  :ref:`sphx_glr_generated_examples_decoding_parallel_decoding.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Parallel video decoding: multi-processing and multi-threading</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we will describe the custom_frame_mappings parameter of the VideoDecoder class. This parameter allows you to provide pre-computed frame mapping information to speed up VideoDecoder instantiation, while maintaining the frame seeking accuracy of seek_mode=&quot;exact&quot;.">

.. only:: html

  .. image:: /generated_examples/decoding/images/thumb/sphx_glr_custom_frame_mappings_thumb.png
    :alt:

  :ref:`sphx_glr_generated_examples_decoding_custom_frame_mappings.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Decoding with custom frame mappings</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>

Encoding
--------



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we&#x27;ll learn how to encode audio samples to a file or to raw bytes using the AudioEncoder class.">

.. only:: html

  .. image:: /generated_examples/encoding/images/thumb/sphx_glr_audio_encoding_thumb.png
    :alt:

  :ref:`sphx_glr_generated_examples_encoding_audio_encoding.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Encoding audio samples with AudioEncoder</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:


   /generated_examples/decoding/index.rst
   /generated_examples/encoding/index.rst


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: generated_examples_python.zip </generated_examples/generated_examples_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: generated_examples_jupyter.zip </generated_examples/generated_examples_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
